# telegram-birthdays

./: .env.example  .gitignore  README.md  pyproject.toml
config/: birthdays.toml.example
deploy/: birthday-bot.service
src/birthday_bot/: __init__.py  bot_handlers.py  config_store.py  date_logic.py  identity_index.py  main.py  models.py  reminder_service.py  reminder_state.py  settings.py
src/telegram_birthdays.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_bot_handlers.py  test_config_store.py  test_date_logic.py  test_identity_index.py  test_reminder_service.py
